# automarker-clay

./: .gitmodules  CHANGELOG.md  CMakeLists.txt  README.md  appimage-builder.yml  exportOptions.plist  vcpkg.json
.github/workflows/: build.yml
cmake/: run_fixup.sh
libs/: clay_renderer_SDL3.c
libs/docs/: SDL3-quick-reference.h
resources/installers/: extension_installer_mac.sh  extension_installer_win.bat
src/: app_state.c  app_state.h  audio_state.c  audio_state.h  clay_renderer_SDL3.c  clay_renderer_SDL3.h  main.c  updater.c  updater.h
src/connections/: after_effects.c  after_effects.h  curl_manager.c  curl_manager.h  premiere_pro.c  premiere_pro.h  process_names.h  process_utils.c  process_utils.h  resolve.c  resolve.h  resolve_helper.py
src/ui/: components.c  components.h  handlers.c  handlers.h  layout.c  layout.h  theme.h
